--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Carlos Vargas <carlosleonardovargashuaman@gmail.com>",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "^4.13.3"
